--- a/base project/style.css
+++ b/base project/style.css
@@ -1,6 +1,37 @@
 body {
+    background-color: rebeccapurple;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
     font-family: "Poppins", sans-serif;
+    margin: 0 0 3rem;
+    min-height: 100vh;
+    margin: auto;
+    padding: 50px;
+}
+
+
+p {
+    color: #dddddd;
+    text-decoration: none;
+    text-align: center;
+    line-height: 1.5;
+    font-size: 2rem;
+}
+
+footer {
+    background-color: #7741ad;
+    color: #f5f5f5;
+    padding: 1rem;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+footer a {
+    color: #350863;
+    text-decoration: none;
 }
