--- a/style.css
+++ b/style.css
@@ -2,17 +2,24 @@
 
 * {
     box-sizing: border-box;
+    text-decoration: none;
 }
-
+a {
+    font-size: 1.2rem;
+}
 body {
     background-color: rebeccapurple;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     font-family: "Poppins", sans-serif;
     margin: 0 0 3rem;
     min-height: 100vh;
+    max-width: 770px;
+    width: 100%;
+    margin: auto;
+    padding: 50px;
 }
 
 ul {
@@ -26,7 +33,31 @@ li {
 }
 
 li a {
-    color: #fff;
+    color: #dddddd;
     font-size: 1.2rem;
     text-decoration: none;
+}
+
+h3 {
+    font-size: 3rem;
+    color:#e4d4f3de;
+    line-height: 1.5;
+    margin: 0px;
+}
+img {
+    border-radius: 50%;
+    border: 2px solid  #9198e5;
+}
+footer {
+    background-color: #7741ad;
+    color: #f5f5f5;
+    padding: 1rem;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+footer a {
+    color: #350863;
 }
