--- a/Harmburger/style.css
+++ b/Harmburger/style.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+
+
 body {
     display: flex;
     align-items: center;
