--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
 
+/* General Styling */
 * {
     box-sizing: border-box;
     text-decoration: none;
 }
+
+/* Anchor tags */
 a {
     font-size: 1.2rem;
 }
+
+/* General Body */
 body {
-    background-color: rebeccapurple;
+    background-color: #048b31;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,6 +26,21 @@ body {
     margin: auto;
     padding: 50px;
 }
+/* Heading  */
+h3 {
+    font-size: 3rem;
+    color:#8baf97;
+    line-height: 1.5;
+    margin: 0px;
+}
+
+/* Image tags */
+img {
+    border-radius: 50%;
+    border: 2px solid  #dde0de;
+}
+
+/* List styles */
 
 ul {
     list-style-type: none;
@@ -38,18 +58,10 @@ li a {
     text-decoration: none;
 }
 
-h3 {
-    font-size: 3rem;
-    color:#e4d4f3de;
-    line-height: 1.5;
-    margin: 0px;
-}
-img {
-    border-radius: 50%;
-    border: 2px solid  #9198e5;
-}
+/* Footer */
+
 footer {
-    background-color: #7741ad;
+    background-color:  #559269;
     color: #f5f5f5;
     padding: 1rem;
     text-align: center;
@@ -59,5 +71,5 @@ footer {
 }
 
 footer a {
-    color: #350863;
+    color:  #1d1d20;
 }
