--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ li {
 
 li a {
     color: #dedede;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     text-decoration: none;
 }
 ul li a:hover {
@@ -69,7 +69,7 @@ ul li a:hover {
     opacity: 0.9;
 }
 small {
-    color: #05426b;
+    color: #5cc4a1;
     font-weight: bold;
     font-size: 1rem;
     line-height: 1.5;
