--- a/Harmburger/style.css
+++ b/Harmburger/style.css
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
 
+:root {
+    --bg-primary:  #272727; 
+    --bg-footer: #494343;
+    --text-color: #b3def0;
+    --primary-text-color: #cbdce4;
+    --secondary-color: #dddddd;
+}
+
 /* General Styling */
 * {
     margin: 0;
@@ -11,11 +19,11 @@
 /* Body Content*/
 
 body {
-    background: #272727;
+    background: var(--bg-primary);
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #fff;
+    color: var(--secondary-color);
     min-height: 100vh;
     font-family: 'Poppins', sans-serif;
 }
@@ -46,9 +54,10 @@ body {
     max-width: 460px;
     margin: auto;
 }
-h3 {
+h4 {
     font-size: 1.7rem;
     text-align: center;
+
 }
 p {
     font-size: 0.8rem;
@@ -109,7 +118,7 @@ p {
 /* Harmbuger close animation effect*/
 
 .menu-btn.open .menu-btn_burger {
-    transform: translateX(-50px);
+    transform: translateX(-100px);
     background: transparent;
 }
 
@@ -139,27 +148,27 @@ nav.active {
     transform: translateX(0);
 }
 nav ul {
-    padding: 0;
+    padding-top: 17px;
     margin: 0;
     list-style-type: none;
     
 }
 nav ul li {
-    padding: 1rem 0;
+    padding: 0.1rem 0;
 }
 
 nav a {
     text-decoration: none;
-    color: #fff;
+    color: var(--secondary-color);
     font-size: 1.5rem;
-    text-transform: uppercase;
+    text-transform: capitalize;
 }
 
 /* Footer */
 
 footer {
     background:#494343;
-    color: #f5f5f5;
+    color: var(--secondary-color);
     padding: 1rem;
     text-align: center;
     position: fixed;
