--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
 
+:root {
+    --bg-primary:  #0e95ca; 
+    --bg-footer: #59a3c0;
+    --text-color: #b3def0;
+    --primary-text-color: #cbdce4;
+}
+
 /* General Styling */
 * {
     box-sizing: border-box;
@@ -13,7 +20,7 @@ a {
 
 /* General Body */
 body {
-    background-color: #048b31;
+    background-color: var(--bg-primary);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -28,14 +35,14 @@ body {
 /* Heading  */
 h3 {
     font-size: 3rem;
-    color:#8baf97;
+    color:var(--text-color);
     line-height: 1.5;
     margin: 0px;
     text-decoration: underline;
 }
 p {
     text-align: center;
-    color: #cecccc;
+    color: var(--primary-text-color);
 }
 /* Image tags */
 img {
@@ -81,7 +88,7 @@ small a {
 /* Footer */
 
 footer {
-    background-color:  #559269;
+    background-color:  var(--bg-footer);
     color: #f5f5f5;
     padding: 1rem;
     text-align: center;
@@ -91,5 +98,5 @@ footer {
 }
 
 footer a {
-    color:  #1d1d20;
+    color: #1d1d20;
 }
