--- a/Toast Notification/style.css
+++ b/Toast Notification/style.css
@@ -22,7 +22,7 @@ body {
     margin: 0 0 3rem;
     min-height: 100vh;
     margin: auto;
-    padding: 50px;
+    padding: 20px;
     width: 450px;
     max-width: 100%;
 }
@@ -59,7 +59,7 @@ button {
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0);
 
 }
-button:hover {
+button:active {
     color: #ddd;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.2);
 
@@ -76,6 +76,9 @@ button:hover {
     border-radius: 0px 8px;
     transform: translate(-400px, 0px);
     transition: 1s ease-in-out;
+    margin-bottom: 55px;
+    margin-right: 40px;
+    max-width: 100%;
 }
 
 .open {
