--- a/Toast Notification/style.css
+++ b/Toast Notification/style.css
@@ -48,7 +48,8 @@ p {
 /* Button link */
 button {
     padding: 10px;
-    margin-top: 30px;
+    margin-top: 0px;
+    margin-bottom: 100px;
     outline: none;
     border: none;
     background-color: var(--link-color);
