--- a/Popup Modal/style.css
+++ b/Popup Modal/style.css
@@ -4,7 +4,7 @@
     --bg-primary:  #235264; 
     --bg-footer: #0e303d;
     --text-color:  #4d7585;
-    --link-color:#041e29;
+    --link-color:#01151d;
 }
 
 
@@ -25,8 +25,58 @@ body {
 nav {
     background: var(--bg-footer) !important;
 }
+/*Button  */
+button {
+    background: #47a386;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    font-size: 1.3rem;
+}
+/* Modal */
+.modal {
+    background: rgba(0, 0, 0,0.5);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.4s ease-in-out;
+}
 
-
+.show {
+    pointer-events: auto;
+    opacity: 1;
+}
+.modal-content {
+    width: 450px;
+    max-width: 100%;
+    padding: 20px;
+    border-radius: 8px;
+    background: white;
+    color: #333;
+    line-height: 1.5;
+    margin: 0px 20px;
+}
+.modal-header h2{
+    margin: 5px;
+    color: #333;
+}
+.modal-body p {
+    font-size: 1rem;
+    color: #5e6268;
+    line-height: 1.5;
+}
+.modal-footer {
+    margin-top: 15px;
+}
 /* Footer */
 
 footer {
