--- a/09 - Sound Board/style.css
+++ b/09 - Sound Board/style.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
 
 :root {
-    --bg-primary:  #211512; 
-    --bg-footer:   #441a10;
-    --link-color:  #1f0701;
+    --bg-primary:  #211a12; 
+    --bg-footer:  #2b1a06;
+    --link-color:  #130b01;
 }
 
 
@@ -20,28 +20,35 @@ body {
     min-height: 100vh;
     margin: auto;  
 }
-
+.dark {
+    background: #333;
+    color: #f1f1f1;
+}
 /* NAVIGATION */
 nav {
     background: var(--bg-footer) !important;
 }
-.carousel {
-    width: 200px;
-    height: 200px;
-    overflow: hidden;margin-top: 50px;
 
+h1{
+    font-size: 2.3rem;
+    margin-bottom: 10px;
 }
-
-img {
-    object-fit: cover;
-    width: 200px;
-    height: 200px;
+p {
+    font-weight: 100;
+    line-height: 1.5;
+    font-size: 1.5rem;
+    color: #eee;
 }
-.image-container {
-    display: flex;
-    transition: transform 0.3s linear;
-    transform: translateX(0);
+h5 {
+    margin-top: 10px;
 }
+.darkTheme {
+    padding: 40px;
+}
+.toggle {
+    padding: 5px 25px;
+}
+/* Footer */
 
 footer {
     background-color: var(--bg-footer);
