--- a/08 - Carousel/style.css
+++ b/08 - Carousel/style.css
@@ -25,25 +25,29 @@ body {
 nav {
     background: var(--bg-footer) !important;
 }
+
+/* CAROUSELS */
+
 .carousel {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     overflow: hidden;
-    margin-top: 50px;
+    margin-top: 100px;
     margin-bottom: 70px;
 
 }
 
 img {
     object-fit: cover;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
 }
 .image-container {
     display: flex;
     transition: transform 0.5s ease-in-out;
     transform: translateX(0);
 }
+/* FOOTER */
 
 footer {
     background-color: var(--bg-footer);
