--- a/10 - Zoom Effects/style.css
+++ b/10 - Zoom Effects/style.css
@@ -25,6 +25,7 @@ nav {
     background: var(--bg-footer) !important;
 }
 
+/*Image container */ 
 .container {
     width: 250px;
     height: 230px;
@@ -39,6 +40,7 @@ img {
     transition: transform 2s ease-out;
 }
 
+/* Footer */
 footer {
     background-color: var(--bg-footer);
 }
